# agent_comp

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf  requirements.docx
agent/: graph.py  state.py
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_user_memories.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/agents/: __init__.py  graph.py  nodes.py  state.py
backend/app/api/: __init__.py
backend/app/api/v1/: auth.py  chat.py  evaluation.py  learning.py  memories.py  profile.py  resources.py  router.py
backend/app/core/: __init__.py  exceptions.py  redis.py  security.py
backend/app/llm/: __init__.py  base.py  deepseek.py  qwen.py  xunfei.py  zhipu.py
backend/app/models/: __init__.py  learner_profile.py  learning.py  user.py  user_memory.py
backend/app/rag/: __init__.py  embeddings.py  pdf_processor.py  retriever.py  vector_store.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  agent_service.py  email_code_service.py  email_service.py  rag_service.py
backend/scripts/: ingest_pdf.py  init_db.py  seed_data.py  test_retrieval.py
docs/: PROJECT_CONTEXT.md  api.md  architecture.md  requirements.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts  auth.ts  utils.ts
frontend/src/stores/: index.ts
(+15 files in other folders)
