[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ai-education-backend"
version = "0.1.0"
description = "AI 教育平台后端"
authors = ["EduAI Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
redis = "^5.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.12"
httpx = "^0.27.0"
websockets = "^13.0"
langgraph = "^0.2.0"
langchain-core = "^0.3.0"
langchain = "^0.3.0"
langchain-qdrant = "^0.2.0"
qdrant-client = "^1.12.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
tenacity = "^9.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.6.0"
mypy = "^1.11.0"
